--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </ul>
               
 
-                <img src="images/simo2_edited.jpg" class="me" alt="me">
+                <img src="images/Sjazz.png" class="me" alt="me">
         
             </div>
 
