--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <a href="https://www.kaggle.com/simofleanta/swimming-trends"><img src="images/swimm.png"></a>
                  <p>This is to identify trends and insights over swimming competition participation among various groups<br>
                     among American Swimming teams.
-                    The manager of the swimming federetation took the decision to change the swimming packages and activities that<br> 
+                    The manager of the swimming federetation took the decision to change the swimming packages and activities that 
                     can attract more teams.              
                     </p> 
                 
