--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="data-col">
                 <a href="https://www.kaggle.com/simofleanta/swimming-trends"><img src="images/swimm.png"></a>
-                 <p>This is to identify trends and insights over swimming competition participation among various groups<br>
+                 <p>This is to identify trends and insights over swimming competition participation among various groups
                     among American Swimming teams.
                     The manager of the swimming federetation took the decision to change the swimming packages and activities that 
                     can attract more teams.              
